--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="row gy-4">
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./imagini2/om6.jpg" alt="George Barbu">
+                        <img src="imagini2/om6.jpg" alt="George Barbu">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">George Barbu</h3>
                             <p class="mb-0">Project Manager</p>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./imagini2/om5.jpg" alt="Lidia Ioan">
+                        <img src="imagini2/om5.jpg" alt="Lidia Ioan">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">Lidia Ioan</h3>
                             <p class="mb-0">Web Designer</p>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./imagini2/om2.jpg" alt="Luca Flintoc">
+                        <img src="imagini2/om2.jpg" alt="Luca Flintoc">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">Luca Flintoc</h3>
                             <p class="mb-0">Consultant IT</p>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="./imagini2/om4.jpg" alt="Ana Georgian">
+                        <img src="imagini2/om4.jpg" alt="Ana Georgian">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">Ana Georgian</h3>
                             <p class="mb-0">Consultant Audit</p>
