--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="row gy-4">
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="imagini2/om6.jpg" alt="George Barbu">
+                        <img src="om6.jpg" alt="George Barbu">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">George Barbu</h3>
                             <p class="mb-0">Project Manager</p>
