--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="row gy-4 align-items-center">
                 <div class="col-lg-5">
-                    <img src="imagini2/analytics..jpg" alt="persoană care lucrează">
+                    <img src="analytics..jpg" alt="persoană care lucrează">
                 </div>
                 <div class="col-lg-5">
                     <h2>Despre noi</h2>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="imagini2/om5.jpg" alt="Lidia Ioan">
+                        <img src="om5.jpg" alt="Lidia Ioan">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">Lidia Ioan</h3>
                             <p class="mb-0">Web Designer</p>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="imagini2/om2.jpg" alt="Luca Flintoc">
+                        <img src="om2.jpg" alt="Luca Flintoc">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">Luca Flintoc</h3>
                             <p class="mb-0">Consultant IT</p>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="team-member px-4 py-5 border shadow-on-hover text-center">
-                        <img src="imagini2/om4.jpg" alt="Ana Georgian">
+                        <img src="om4.jpg" alt="Ana Georgian">
                         <div class="team-member-content">
                             <h3 class="mb-0 mt-4">Ana Georgian</h3>
                             <p class="mb-0">Consultant Audit</p>
@@ -270,7 +270,7 @@
                                 <div class="review bg-white p-5 text-center">
                                     <p class="mb-0 text-black frst-italic">“Nici nu mai ştiu de câţi ani colaborăm, de mulţi ani oricum. O echipă creativă, cu idei, care ţine pasul cu domeniul competitiv în care activează.”</p>
                                     <div class="person mt-4">
-                                        <img src="imagini2/businessman2..png" alt="testimonialul primei persoane">
+                                        <img src="businessman2..png" alt="testimonialul primei persoane">
                                         <h3 class="mb-0 mt-2">Viorel Khol</h3>
                                         <span class="stars">
                                             <i class="ri-star-fill"></i>
@@ -291,7 +291,7 @@
                                 <div class="review bg-white p-5 text-center">
                                     <p class="mb-0 text-black">”Sunteți o echipă exemplară pentru domeniul în care activați. Înțeleg de ce agentii economici care au realizat cu voi un serviciu web se întorc și pentru alte proiecte la colaborarea cu echipa KLOP.”</p>
                                     <div class="person mt-4">
-                                        <img src="imagini2/stalin.jpg" alt="Stalin e mulțumit">
+                                        <img src="stalin.jpg" alt="Stalin e mulțumit">
                                         <h3 class="mb-0 mt-2">Stalin</h3>
                                         <span class="stars">
                                             <i class="ri-star-fill"></i>
@@ -312,7 +312,7 @@
                                 <div class="review bg-white p-5 text-center">
                                     <p class="mb-0 text-black">”Mulţumim frumos pentru tot ceea ce aţi făcut, a mers şnur din punctul nostru de vedere, aşa că ne bucurăm că am ales colaborarea cu voi.”</p>
                                     <div class="person mt-4">
-                                        <img src="imagini2/jorgen-haland-QVeRgFErOPs-unsplash.jpg" alt="Putin și Trump aprobă">
+                                        <img src="jorgen-haland-QVeRgFErOPs-unsplash.jpg" alt="Putin și Trump aprobă">
                                         <h3 class="mb-0 mt-2">Putin și Trump</h3>
                                         <span class="stars">
                                             <i class="ri-star-fill"></i>
@@ -334,7 +334,7 @@
                                     <div class="quote-icon"><i class="ri-double-quotes-l"></i></div>
                                     <p class="mb-0 text-black">”Personal sunt foarte mulțumit de colaborarea cu voi în special datorită seriozității și profesionalismului de care ați dat dovadă. Vă recomand cu maximă încredere în toate discuțiile pe care le am cu persoane interesate de domeniul dumneavoastră.”</p>
                                     <div class="person mt-4">
-                                        <img src="imagini2/lincoln.jpg" alt="Și Lincoln a zis da">
+                                        <img src="lincoln.jpg" alt="Și Lincoln a zis da">
                                         <h3 class="mb-0 mt-2">Abraham Lincoln</h3>
                                         <span class="stars">
                                             <i class="ri-star-fill"></i>
